--- a/basic_clone/manifest.json
+++ b/basic_clone/manifest.json
@@ -18,6 +18,13 @@
     "default_title": "Mobile Clone",
     "default_popup": "popup.html"
   },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["device-panel.js"],
+      "run_at": "document_end"
+    }
+  ],
   "icons": {},
   "web_accessible_resources": [
     {
