--- a/basic_clone/manifest.json
+++ b/basic_clone/manifest.json
@@ -8,7 +8,11 @@
     "scripting",
     "tabs",
     "storage",
-    "activeTab"
+    "activeTab",
+    "tabCapture",
+    "offscreen",
+    "commands",
+    "downloads"
   ],
   "host_permissions": ["<all_urls>"],
   "background": {
@@ -17,6 +21,11 @@
   "action": {
     "default_title": "Mobile Clone",
     "default_popup": "popup.html"
+  },
+  "commands": {
+    "start-stop-video-capture": {
+      "description": "Start/Stop Screen Recording"
+    }
   },
   "content_scripts": [
     {
