react clone bs2

--- a/react-clone/src/manifest.json
+++ b/react-clone/src/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
-  "name": "Mobile Device Simulator",
+  "name": "Mobile Device Simulator - React",
   "version": "1.0.0",
-  "description": "Simulate mobile devices with React and Three.js",
+  "description": "Simulate mobile devices with realistic mockups",
   "permissions": [
     "webRequest",
     "scripting",
@@ -23,12 +23,7 @@
   },
   "action": {
     "default_popup": "popup.html",
-    "default_icon": {
-      "16": "icons/icon16.png",
-      "32": "icons/icon32.png",
-      "48": "icons/icon48.png",
-      "128": "icons/icon128.png"
-    }
+    "default_icon": {}
   },
   "content_scripts": [
     {
