added toggle browser nav,

--- a/react-clone/src/manifest.json
+++ b/react-clone/src/manifest.json
@@ -34,7 +34,12 @@
   "web_accessible_resources": [
     {
       "matches": ["<all_urls>"],
-      "resources": ["devicePanel.js", "assets/**/*", "icons/**/*", "offscreen/**/*"]
+      "resources": [
+        "devicePanel.js",
+        "assets/**/*",
+        "icons/**/*",
+        "offscreen/**/*"
+      ]
     }
   ],
   "commands": {
