--- a/react-clone/src/manifest.json
+++ b/react-clone/src/manifest.json
@@ -36,6 +36,7 @@
       "matches": ["<all_urls>"],
       "resources": [
         "devicePanel.js",
+        "devicePanel.html",
         "assets/**/*",
         "icons/**/*",
         "offscreen/**/*"
